--- a/localisation/english/MD_countries_cosmetic_l_english.yml
+++ b/localisation/english/MD_countries_cosmetic_l_english.yml
@@ -1589,8 +1589,8 @@
  PER_Zoroastrian_state_Flag: "ērān"
  PER_Zoroastrian_state_Flag_DEF: "ērān "
  PER_Zoroastrian_State_Flag_ADJ: "Iranian"
- PER_Zoroastrian_Empire_Flag: "IDFK Some Empire"
- PER_Zoroastrian_Empire_Flag_DEF: "IDFK Some Empire"
+ PER_Zoroastrian_Empire_Flag: "Iranshahr"
+ PER_Zoroastrian_Empire_Flag_DEF: "Iranshahr"
  PER_Zoroastrian_Empire_Flag_ADJ: "Iranian"
 # ARTESH AUTHORITY TAGS
  PER_ARTESH_CONTROL: "Artesh Authority of Iran"
