--- a/Changelog.txt
+++ b/Changelog.txt
@@ -137,7 +137,9 @@ v1.10.0
   - Custom Productivity setup for FRA
   - Added Israeli Ship Namelists
   - Added the Malian Civil War/Tuareg Rebellion
-  - Completely revamped US variants and starting production
+  - Completely revamped US variants, starting production, and OOB
+  - Improved Russia equipment variants
+  - Improved France equipment variants
   - Complete USA namelist rework
   - Rebalanced and slightly tweaked Ethiopian-Eritrean war
   - Add agame rule for Germany focus
