--- a/localisation/english/MD_focus_USB_l_english.yml
+++ b/localisation/english/MD_focus_USB_l_english.yml
@@ -596,7 +596,7 @@ FSA_america_mandatory_service_period_desc: "To ensure the maximum readiness of o
 FSA_america_ground_defense_is_air_defense: "Ground Defense Is Air Defense"
 FSA_america_ground_defense_is_air_defense_desc: "The GDAD program is a slew of investments in research and military training to equip as well as prepare our ground forces with the ability to properly defend and withstand prolonged enemy air based combat units. The modern war is defined by the queen of the battlefield, that queen is the airforce and with our nation not being so chatty with the outside world, we must seek out the ability to remedy this queen with an appropriate King maker."
 FSA_america_warfare_beyond_the_grave: "Warfare Beyond The Grave"
-FSA_america_warfare_beyond_the_grave_desc: "Graveyard Warfare, this new 4th Gen based doctrine will allow us to make movies like Red Dawn look like childs play. Our resistence is eternal for our nation is eternal."
+FSA_america_warfare_beyond_the_grave_desc: "Graveyard Warfare, this new 4th Gen based doctrine will allow us to make movies like Red Dawn look like child's play. Your resistance is eternal for our nation is eternal."
 
 
 ### The New Identity Plan
@@ -647,8 +647,8 @@ free_states_idea_naval_budget_priorities: "Naval Budget Priority"
 free_states_idea_naval_budget_priorities_desc: "With most of the remaining military from the old order being more or less involved with the navy our budgeting prioroties have begun to reflect such influences. But how good is such an influence when our backs are to the continent and not necessarily to the sea."
 free_states_idea_army_defensive_budgeting: "Army Defensive Budgeting"
 free_states_idea_army_defensive_budgeting_desc: "Modern wars can be won very quickly or very slowly. The modern civilian has more power at their disposal then most seem to realize and yet we do realize this. Our modern doctrine will combine aspects of 4th Generational Warfare with standard attritional doctrine. Ensuring we can have a moblie defense with the lowest possible expense to both material and personnel alike. This new doctrine is being called DEW or Defensive Expenditure Warfare."
-free_states_idea_naval_rennovations_budget: "Naval Rennovations Budget"
-free_states_idea_naval_rennovations_budget_desc: "With the state of our situation and our coastline being sizeable at best and monsterous at worst. We must invest in revamping and rennovating the entirety of our navy if we are to even think about defending ourselves from the vast oceans and those who seek to land on our shores."
+free_states_idea_naval_renovations_budget: "Naval Renovations Budget"
+free_states_idea_naval_renovations_budget_desc: "With the state of our situation and our coastline being sizeable at best and monsterous at worst. We must invest in revamping and rennovating the entirety of our navy if we are to even think about defending ourselves from the vast oceans and those who seek to land on our shores."
 free_states_idea_foreign_relations_act: "Foreign Relations Act"
 free_states_idea_foreign_relations_act_desc: "The Foreign Relations Act is a diplomatic investment in appealing to foreign powers to get better trade deals and worker exchange programs. Overall our economy will grow, but our politicall capabilities will be strained due to keeping on top of such obligations."
 free_states_idea_domestic_priority_policy: "Domestic Priority Policy"
