--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -2201,6 +2201,24 @@
  CHE_Strengthen_com_partys_agenda_arm: "Criticism of the political course of Armenia"
  CHE_Financing_of_protest_movements_arm: "Take over the protest initiative"
  CHE_Establish_connections_arm: "Restore old ties in Armenia"
+
+ CHE_caucasians_revol_category: "Caucasian Revolution"
+ CHE_caucasians_revol_category_desc: "There is no other means of combating national hatred than the organization and rallying of the oppressed class to fight against the oppressor class in each individual country, such as uniting such national workers' organizations into one international workers' army to fight against international capital."
+ CHE_Establish_connectionsz_aze: "Establish ties with Azerbaijani communists"
+ CHE_azez_revol: "Revolution in Azerbaijan!"
+ CHE_Financing_of_protest_movementsz_aze: "Financing protest movements"
+ CHE_Strengthen_com_partysz_agenda: "Strengthen the communist agenda"
+ CHE_parlament_azez_places: "Find supporters in the Azerbaijani parliament"
+ CHE_geoz_revol: "Revolution in Georgia!"
+ CHE_parlament_geoz_places: "Lower the authority of Parliament."
+ CHE_Strengthen_com_partys_agendaz_geo: "Criticism of the political course of Georgia"
+ CHE_Financing_of_protest_movementsz_geo: "Take over the protest initiative"
+ CHE_Establish_connectionsz_geo: "Restore old ties in Georgia"
+ CHE_armz_revol: "Revolution in Armenia!"
+ CHE_parlament_armz_places: "Lower the authority of Parliament."
+ CHE_Strengthen_com_partys_agendaz_arm: "Criticism of the political course of Armenia"
+ CHE_Financing_of_protest_movementsz_arm: "Take over the protest initiative"
+ CHE_Establish_connectionsz_arm: "Restore old ties in Armenia"
  
 
  CHE_we_are_at_war: "We Are At War!"
