--- a/localisation/english/MD_focus_USB_l_english.yml
+++ b/localisation/english/MD_focus_USB_l_english.yml
@@ -676,15 +676,15 @@ free_states_idea_department_for_energy_innovation_desc: "To claim we use the fut
 free_states_idea_infrastructure_readiness_act: "Infrastructure Readiness Act"
 free_states_idea_infrastructure_readiness_act_desc: "The Infrastructure Readiness Act is a declaration of war in its own right against malcontent and laziness when it comes to preservation of our nation's infrastructure. Setting inspection intervals and pre-planning construction dates as well as material acquisitions will allow for the speedy repair and upkeep of our infrastructure while limiting the overall effect it can have on local population's day to day lives."
 free_states_idea_defensive_officers_school: "Defensive Officers School"
-free_states_idea_defensive_officers_school_desc: "We must understand how to hold our own, specialize training around getting more out of less and being able to truly handle our own defense initiatives against a reckless foe."
+free_states_idea_defensive_officers_school_desc: "We must understand how to hold our own, specialized training around getting more out of less and being able to truly handle our own defense initiatives against a reckless foe."
 free_states_idea_the_bulwark_doctrine: "The Bulwark Doctrine"
 free_states_idea_the_bulwark_doctrine_desc: "The Bulwark Doctrine is our fundamental shift in preserving the defense and spirit our nation. Understanding how to utilize terrain, logistics and the ability to defend til death without everyone dying. This collection is what shall determine if we survive or are lost to the trials of time itself."
 free_states_idea_the_fighter_defense_doctrine: "The Fighter Defense Doctrine"
 free_states_idea_the_fighter_defense_doctrine_desc: "Defending our skies allow us to secure our ground forces. Therefore we must specialize our air training and production to ensure the supremacy of our air capabilities."
 free_states_idea_the_increasing_defensive_capabilites: "Increasing Defensive Capabilities"
 free_states_idea_the_increasing_defensive_capabilites_desc: "The IDC program is the utilization of our aircraft production methods to benefit and help our human pilots to do things in the air normal pilots could not do. Radar innovations, thrust and flight control advancements and so forth. We will be the defenders of our nation's airways and it shall be a clear day every day."
-free_states_idea_naval_mining_warfare_refinement_program: "NMWRP"
-free_states_idea_naval_mining_warfare_refinement_program_desc: "The Naval Mining Warfare Refinement Program is a dedicated training and enhancement institution to train and refine our navy around the prowess of sea mines and mining warefare."
+free_states_idea_naval_mining_warfare_refinement_program: "Naval Mining Warfare Refinement Program"
+free_states_idea_naval_mining_warfare_refinement_program_desc: "The Naval Mining Warfare Refinement Program is a dedicated training and enhancement institution to train and refine our navy around the prowess of sea mines and mining warfare."
 free_states_idea_armored_assault_assist_groups: "Armored Assault Assist Groups"
 free_states_idea_armored_assault_assist_groups_desc: "The AAAG or Triple AG is a battle doctrine to localize as well as specialize rmor elements to assist our core army in punching through and dividing up enemy forces."
 free_states_idea_aggressive_officer_corps: "Aggressive Officer Corps"
@@ -694,7 +694,7 @@ free_states_idea_material_not_human_loss_desc: "Equipment can be replaced, but e
 free_states_idea_survivability_program: "Survivability Program"
 free_states_idea_survivability_program_desc: "We must ensure the innovations in survivability, in this regard we will look into refining and developing such ways to maximize not only personnel survival but if and all possible the survivability of equipment as well."
 free_states_idea_admirable_admiralty: "The Admirable Admiralty"
-free_states_idea_admirable_admiralty_desc: "The profficiency and raw talents of our naval leaders are the pinnacle of how we ensure our naval supremacy."
+free_states_idea_admirable_admiralty_desc: "The proficiency and raw talents of our naval leaders are the pinnacle of how we ensure our naval supremacy."
 FSA_america_hit_and_hit_again: "Hit Them And Then Hit Them Again"
 FSA_america_hit_and_hit_again_desc: "You ever tried playing psychologial warfare with boats, well now we can. Specializing and understanding the weaknesses of our own species we can direct our battle plays around dealing critical blows after disorientation of enemy crews. This is a gambling play but if successful would result in critical strikes against enemy fleet capabilities."
 free_states_idea_the_assimilation_program: "The Assimilation Program"
