--- a/localisation/english/MD_focus_CMW_l_english.yml
+++ b/localisation/english/MD_focus_CMW_l_english.yml
@@ -10,8 +10,26 @@
  CMW_Political_Power_Gain: " £political_power_texticon  Daily Political Power Gain"
  CMW_Modify_Political_Power_Gain_TT: "£political_power_texticon  Daily Political Power  Gain: [?CMW_Political_Power_Gain_change|%+] \n"
  CMW_Research_Speed_Factor: "£research_speed_texticon  Research Speed"
- CMW_Modify_Research_Speed_Factor_TT: "£research_speed_texticon  Research Speed: [?CMW_Research_Speed_Factor_Change|%+] \n"
+ CMW_Modify_Research_Speed_Factor_TT: "£research_speed_texticon  Research Speed: [?CMW_Research_Speed_Factor_change|%+] \n"
+ CMW_Fuel_Gain_Factor: "£fuel_gain_oil_texticon  Fuel Gain per Fossil Fuels"
+ CMW_Fuel_Gain_Factor_TT: "£fuel_gain_oil_texticon  Fuel Gain per Fossil Fuels: [?CMW_Fuel_Gain_Factor_change|%+] \n"
+ CMW_Trade_Opinion_Factor: "£trade_deal_opinion_texticon  Trade deal opinion factor"
+ CMW_modify_trade_opinion_factor_TT: "£trade_deal_opinion_texticon  Trade deal opinion factor: [?CMW_trade_opinion_Factor_change|%+] \n"
+
+
+
+
+
+
+
+
+
+
 
  ##### Focus Tree #####
  CMW_of_Learning: "Commonwealth of Learning"
  CMW_of_Learning_desc: "Commonwealth Of Learning, an intergovernmental organization of  The Commonwealth, based in Metro Vancouver, Canada, collaborates with various partners  in the Commonwealth and international development agencies to advance open learning  and distance education."
+ CMW_New_Petroleum_Group: "New Petroleum Producers Discussion Group"
+ CMW_New_Petroleum_Group_desc: "The New Petroleum Producers Discussion Group is a collaborative platform for emerging oil-producing nations to share insights and strategies for the petroleum industry's development."
+ CMW_Hub_And_Spokes_Program: "Hub and Spokes Trade Programme"
+ CMW_Hub_And_Spokes_Program_desc: "The Hub and Spokes Trade Programme is an initiative fostering trade partnerships between multiple countries, particularly focusing on capacity-building and trade-related development efforts."
