--- a/localisation/english/MD_focus_USA_l_english.yml
+++ b/localisation/english/MD_focus_USA_l_english.yml
@@ -1734,14 +1734,14 @@
  USA_diplomatic_entente_alliance_desc: "Seeking to bolster diplomatic ties and forge strategic alliances, the government initiates the Diplomatic Entente Alliance. This focus aims to strengthen cooperation with like-minded nations through mutual defense pacts, trade agreements, and diplomatic initiatives."
 
 
- #######The Modern Monarchist Movement Secured Control Over The NFP
+  #######The Modern Monarchist Movement Secured Control Over The NFP
   USA_monarchist_the_american_dynasty_rises: "The American Dynasty Rises"
   USA_monarchist_the_american_dynasty_rises_desc: "Through leaps and bounds the MMM has secured power over the more closeted and protectionist NFP. The coalition in many eyes was doomed to fail, but no one expected the Modern Monarchist to be so popular in of all nations America itself. Nevertheless the die has been cast and now its up to the new leadership to guide, inform and protect these United Kingdoms of America and her citizens."
   USA_royal_symphony_orchestra: "Royal Symphony Orchestra"
   USA_royal_symphony_orchestra_desc: "Establishing the Royal Symphony Orchestra, the monarch elevates the nation's cultural scene with world-class musical performances. This focus aims to celebrate the arts, inspire creativity, and enrich the lives of citizens. The orchestra showcases classical masterpieces, contemporary compositions, and national anthems, serving as a cultural ambassador for the monarchy."
   USA_royal_arts_endowment: "Royal Arts Endowment"
   USA_royal_arts_endowment_desc: "Establishing the Royal Arts Endowment, the monarch establishes a fund to patronize and support the arts. This focus aims to cultivate a vibrant cultural scene, fostering creativity, innovation, and national pride. Through grants, scholarships, and sponsorships, the endowment seeks to nurture artistic talent and preserve the nation's cultural heritage for future generations."
-  USA_nobility_reform_commission: "Nobility Reform Comission"
+  USA_nobility_reform_commission: "Nobility Reform Commission"
   USA_nobility_reform_commission_desc: "Instituting the Nobility Reform Commission, the monarch convenes a council of nobles to review and modernize the institution of nobility. This focus aims to adapt traditional aristocratic structures to the needs of the modern era, promoting meritocracy, inclusivity, and social mobility. The commission evaluates titles, privileges, and obligations, ensuring that the nobility remains relevant and accountable in the changing times."
   USA_imperial_architectural_legacy: "Imperial Architectural Legacy"
   USA_imperial_architectural_legacy_desc: "Embracing a vision of grandeur and permanence, the monarch initiates the Imperial Architectural Legacy project. This focus aims to leave a lasting mark on the nation's landscape, with the construction of iconic architectural landmarks and monuments. From grand palaces to towering monuments, the project seeks to showcase the majesty and power of the monarchy for generations to come."
