--- a/localisation/english/MD_focus_USA_l_english.yml
+++ b/localisation/english/MD_focus_USA_l_english.yml
@@ -2047,7 +2047,7 @@
  USA_decision_police_training_troubles_desc: "Recent events have shown a growing aggression complex and rise in excessive use of force behavior trends in local law enforcement agencies. This has caused outcry in the form of protest and a new movement to supposedly \"Defund The Police\". We must deal with this before something serious comes to a head."
  USA_decision_the_green_wave_debate: "The Green Wave Debate"
  USA_decision_the_green_wave_debate_desc: "In recent years the development as well as lobbying for renewable energy forms of energy production has gained considerable traction. This has culminated in renewed interest in the age old boogy man of politics since the dawn of modern industrialization itself. That of Climate Change, or as some may remember it as Global Warming. Regardless as technology advances so do people's understandings as well, we must figure out what stance the federal government will have on this new way forward."
- USA_decision_the_job_impact_scare: "The Job Imapct Scare"
+ USA_decision_the_job_impact_scare: "The Job Impact Scare"
  USA_decision_the_job_impact_scare_desc: "With the recent rumblings about a \"Green Economy\" buzzing about many people are being lulled into a sense of fear due to how drastically this kind of change could have on many jobs. Similar to the automation and AI scares, many wonder how many jobs and skill sets will be nullified or made redundant of such changes. As such we need to think carefully of how to handle this kind of change, lest we wish to be voted out due to the mob mentality on the situation."
  USA_decision_the_social_impact: "The Social Impact"
  USA_decision_the_social_impact_desc: "The \"Green Economy\" will have an interesting social impact as many advocate for standardizing and forced modernization of housing both new and old. Some argue this would break many home owners and be the biggest mistake of governmental regulation since the government inaction which resulted in the Penn Central Railroad Bankruptcy back in the 1970s. others say it will be something that can be rolled out with new houses though there are concerns of the culture shock this may have on our ever aging population demographics. Regardless a choice needs to be made and made sooner rather than later."
@@ -2192,7 +2192,7 @@
  us_military_advisors_to_afghanistan: "US Military Advisors"
  us_military_advisors_to_afghanistan_desc: "The United States has sent over some advisors to help train our soldiers molding them for irregular warfare."
  USA_idea_aas_food_for_all_policy: "Food For All Policy"
- USA_idea_aas_food_for_all_policy_desc: "Modern luxuries in terms of agricultural advancements are heavily under utilized. We will make our nation a nation of no hunger. We will ensure truly that there is food for all."
+ USA_idea_aas_food_for_all_policy_desc: "Modern luxuries in terms of agricultural advancements are heavily underutilized. We will make our nation a nation of no hunger. We will ensure truly that there is food for all."
  USA_idea_aas_existence_is_pain: "Existence Is Pain"
  USA_idea_aas_existence_is_pain_desc: "Our very existence is stoking fears in the supposed, \"Social Order\", of the societies at large. Rather than seeing us as more of an isolationist, they see us as a threat to their own norms and stability. As such while we'll do whatever we can to prevent any and all conflict, the war drums are beating and it looks like survival is truly the next main objective."
 
@@ -2634,17 +2634,17 @@
  USA_events_domestic_policies.12.t: "The Drug Crisis...Not That One The Other One"
  USA_events_domestic_policies.12.d: "The drug transparency crisis, apart of the growing monster that is the US Healthcare Crisis is one which has gained more and more traction over the months. Rising medical costs wherein a part are simply cause the doctor perscribe some medicine you could almost get over the counter has seen many question the validity of such prices. While obviously the process of creating new drugs for the use in medical treatments is a costly investment, it is however the easiest thing to exploit. The FDA only does so much within its given power and budget as well as there are other ways companies could exploit the matter at hand. So we must now delve into the situation and look to resolve it before we find ourselves dealing with a crisis...or voted out come next election."
  USA_events_domestic_policies.12.o1: "Expand The FDA's Budget And Abilities"
- USA_events_domestic_policies.12.o2: "Perscription Reforms And Increase The FDA's Budget"
+ USA_events_domestic_policies.12.o2: "Prescription Reforms And Increase The FDA's Budget"
  USA_events_domestic_policies.12.o3: "Enforce An Internal Review Board"
  USA_events_domestic_policies.13.t: "Healthcare Billing Troubles"
  USA_events_domestic_policies.13.d: "The rising medical cost is a crisis in its own right. Part of this crisis is the lack of billing transparency in terms of what things cost and the inability to consult and understand why things cost the way they do. To this effect we must seek out real answers to ensure this problem is solved or at least doesn't get any worse then what it already has."
  USA_events_domestic_policies.13.o1: "Set Up The Billing Commission"
- USA_events_domestic_policies.13.o2: "Legislate Reforms Around Transparency Enforcement"
+ USA_events_domestic_policies.13.o2: "Legislative Reforms Around Transparency Enforcement"
  USA_events_domestic_policies.13.o3: "Set Up Decentralized Review Committees In The States"
  USA_events_domestic_policies.14.t: "Social Security Not Secure?"
  USA_events_domestic_policies.14.d: "The growing pains that is the Social Security Program is the fastest growing problem that everyone knows, but doesn't actually care about. Over the years we've thrown more and more money at the issue which has resulted it competing for the nation's biggest expenditure. Little known fact about the issue is that nearly 25% of the budget for the program goes towards administration of the program. Regardless we really need to observe and fix this issue before we genuinely need to worry about it."
  USA_events_domestic_policies.14.o1: "Increase Benefits Enough It Won't Be Our Problem"
- USA_events_domestic_policies.14.o2: "Legislate Reforms In Administration And Budget Allocation"
+ USA_events_domestic_policies.14.o2: "Legislative Reforms In Administration And Budget Allocation"
  USA_events_domestic_policies.14.o3: "Cut The Budget And Force The Downgrading Of The Administrative Block"
  USA_events_domestic_policies.15.t: "Police Training Troubles"
  USA_events_domestic_policies.15.d: "Rising public unrest as local law enforcement agencies seem to be using more and more aggressive forms of action to handle situations. This has resulted in a smattering of events which have tanked the public trust in their local law enforcement agencies. Protest have been on the rise and a new movement called \"Defund The Police\" has started to gain national attention. Congress has convened to handle the issue and hopefully put an end to this conflagration of an issue at hand."
