--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -204,7 +204,7 @@
  IRQ_pij: "Contact the PIJ"
  IRQ_pij_desc: "The PIJ will be beneficial in our bid to weaken the Israeli state. We can use their militias, troops, and command structure as one way of doing so."
  IRQ_antagonize_israel: "Antagonize Israel"
- IRQ_antagonize_israel_desc: "The Israeli's have long been antagonizing our government, and our leadership. If we do not stirke back, they will never know their place."
+ IRQ_antagonize_israel_desc: "The Israeli's have long been antagonizing our government, and our leadership. If we do not strike back, they will never know their place."
  IRQ_antagonize_iran: "Antagonize Iran"
  IRQ_antagonize_iran_desc: "The Iranian's must know that there is a bigger power in the region, despite all of our setbacks, we will slap Iran right back to its seat in the corner."
  IRQ_ministry_of_education: "Ministry of Education"
@@ -310,7 +310,7 @@
  IRQ_restructure_school_curriculum: "Restructure School Curriculum"
  IRQ_restructure_school_curriculum_desc: "The school system under Saddam Husseins regime destroyed countless minds by it's propaganda. If we want to prevent an ideological disaster from brewing in our nation, we must take steps to reverse this damage by restructuring our Schools."
  IRQ_grants_for_schools: "Grants For Schools"
- IRQ_grants_for_schools_desc: "To aid our current campaign of restructuring our school curriculums, we need to allocate a certain amount of money to make sure that the schools meet these basic demansd."
+ IRQ_grants_for_schools_desc: "To aid our current campaign of restructuring our school curriculums, we need to allocate a certain amount of money to make sure that the schools meet these basic demands."
  IRQ_increase_accountability: "Increase Accountability"
  IRQ_increase_accountability_desc: "Instructors must be kept accountable for their actions. Under the Ba'athist regime, countless teachers abused students and partook in acts of corruption through bribery or other means."
  IRQ_tighten_sanitation_standards: "Tighten Sanitation Standards"
@@ -339,8 +339,8 @@
  IRQ_upholding_the_constitution_desc: "The constitution will not and has not been written in vain, it must be upheld and reinforced to ensure the rule of law is above all else."
  IRQ_reaffirm_democratic_institutions: "Reaffirm Democratic Institutions"
  IRQ_reaffirm_democratic_institutions_desc: "Without our support, democratic institutions will start to slowly fall apart and our state will slip back into the same autocratic cycle that it had been in for the past few decades."
- IRQ_seperation_of_mosque_and_state: "Seperation of Mosque and State"
- IRQ_seperation_of_mosque_and_state_desc: "The mosque must not dictate the actions of the state, as our government must be free from any form of clerical influence that may be exerted towards us."
+ IRQ_separation_of_mosque_and_state: "Separation of Mosque and State"
+ IRQ_separation_of_mosque_and_state_desc: "The mosque must not dictate the actions of the state, as our government must be free from any form of clerical influence that may be exerted towards us."
  IRQ_justice_prevails: "Will Justice Prevail?"
  IRQ_justice_prevails_desc: "Those responsible for causing problems in our nation must be held accountable. The Kurds have been smuggling lots and lots of drugs over the border recently, and not much has been done to prevent it.."
  IRQ_iraqi_free_forces: "Free Iraqi Forces"
