--- a/localisation/english/MD_focus_IRQ_l_english.yml
+++ b/localisation/english/MD_focus_IRQ_l_english.yml
@@ -344,23 +344,23 @@
  IRQ_justice_prevails: "Will Justice Prevail?"
  IRQ_justice_prevails_desc: "Those responsible for causing problems in our nation must be held accountable. The Kurds have been smuggling lots and lots of drugs over the border recently, and not much has been done to prevent it.."
  IRQ_iraqi_free_forces: "Free Iraqi Forces"
- IRQ_iraqi_free_forces_desc: "The Free Iraqi Forces (IFR) are our party's militia wing, having been formed by Iraqi expatriats ready at a minutes notice to defend Iraq."
+ IRQ_iraqi_free_forces_desc: "The Free Iraqi Forces (IFR) are our party's militia wing, having been formed by Iraqi expatriate ready at a minutes notice to defend Iraq."
  IRQ_anti_saddam_sentiment: "Anti-Ba'ath Sentiment"
  IRQ_anti_saddam_sentiment_desc: "We can't slip back into another era of ba'athism, and we certainly cannot have anyone reminacing about those days."
  IRQ_ali_bin_al_husseins_request: "Ali Bin al-Husseins Request"
  IRQ_ali_bin_al_husseins_request_desc: "Basically the spokesmen for the former monarchy, al-Hussein has continuously pushed for some form of monarchy, rooting for the current claimant to the throne, Ra'ad bin Zeid."
  IRQ_counter_iranian_militias: "Counter Iranian Militias"
  IRQ_counter_iranian_militias_desc: "Iran has boosted its presence through the use of militias and armed groups in an attempt to consolidate soft control over Iraq. We must curb this presence by all means necessary."
- IRQ_intergation_to_armed_forces: "Intergation To Armed Forces"
- IRQ_intergation_to_armed_forces_desc: "It is time that we integrate the IFR into the Iraqi army in order to cut back on costs, and push for better cooperation."
- IRQ_enforced_dicipline: "Enforced Dicipline"
- IRQ_enforced_dicipline_desc: "We need to keep our troops in line in order to ensure that no one oversteps their boundries. This way we'll also have more polished and conditioned troops."
+ IRQ_integration_to_armed_forces: "Integration To Armed Forces"
+ IRQ_integration_to_armed_forces_desc: "It is time that we integrate the IFR into the Iraqi army in order to cut back on costs, and push for better cooperation."
+ IRQ_enforced_discipline: "Enforced Discipline"
+ IRQ_enforced_discipline_desc: "We need to keep our troops in line in order to ensure that no one oversteps their boundries. This way we'll also have more polished and conditioned troops."
  IRQ_exploit_american_presence: "Exploit American Presence"
  IRQ_exploit_american_presence_desc: "We cannot let the American presence in the nation go untapped, we must use their resources to our benefit."
  IRQ_mobilize_sadrs_forces: "Mobilize Sadrist Forces"
  IRQ_mobilize_sadrs_forces_desc: "Through political negotiations, we must strike a deal with the Sadrist forces to support the reinforcement of the new system and government."
  IRQ_restrictions_on_american_army: "Restrictions On American Army"
- IRQ_restrictions_on_american_army_desc: "We cannot let the American simply army do as they wish, there must be clera boundaries and restrictions set which they must not cross."
+ IRQ_restrictions_on_american_army_desc: "We cannot let the American simply army do as they wish, there must be clear boundaries and restrictions set which they must not cross."
  IRQ_counter_cia_intel: "Counter CIA Intel"
  IRQ_counter_cia_intel_desc: "Using CIA intel against them will certainly set them off, but it will be beneficial in the long run if we can thwart their plans to destabilize Iraq or the region."
  IRQ_the_american_spring_board: "The American Spring Board"
@@ -392,11 +392,11 @@
  IRQ_clerical_militarism: "Clerical Militarism"
  IRQ_clerical_militarism_desc: "If we have the clerics on our side, then we have another army at our disposal. We will use clerics and their sermons to promote militaristic ideals within our society as a new means of gathering manpower for the Iraqi nation."
  IRQ_peace_deals_within: "Peace Deals Within"
- IRQ_peace_deals_within_desc: "Our people are actively tearing each other apart, causing much distruption and chaos in society. It's about time that we try to mediate peace deals amongst the internal factions fighting within."
+ IRQ_peace_deals_within_desc: "Our people are actively tearing each other apart, causing much disruption and chaos in society. It's about time that we try to mediate peace deals amongst the internal factions fighting within."
  IRQ_cooperation_with_hezbolla: "Cooperation With Hezbollah"
  IRQ_cooperation_with_hezbolla_desc: "Hezbollah is one of our many ideological allies, despite being an international pariah. We need to establish proper ties with them ensuring the safety of both of our states."
  IRQ_partners_in_syria: "Our Partners in Syria"
- IRQ_partners_in_syria_desc: "We need more friends in the world, and our Syrian neighbors are perfect for this inititative."
+ IRQ_partners_in_syria_desc: "We need more friends in the world, and our Asian neighbors are perfect for this initiative."
  IRQ_extend_a_hand_to_lebanon: "Extend a Hand to Palestine"
  IRQ_extend_a_hand_to_lebanon_desc: "The Palestinians have been quite suppressed and neglected in international affairs recently, but we can change that. We will extend a hand for them to reach to and hold onto when needed."
  IRQ_the_partys_ambition: "The Party's Ambition"
@@ -424,7 +424,7 @@
  IRQ_women_in_our_society: "Women in Our Society"
  IRQ_women_in_our_society_desc: "Suppressing the role of the woman in our society has been an unfortunate path that previous governments had taken, but we will not repeat this mistake. We will ensure their rights are upheld, and reinforced."
  IRQ_female_positions: "Positions for Women"
- IRQ_female_positions_desc: "Some workplaces and employers have installed new regulations that may make it difficult for women to land a job, and we must crack down on these discriminative policies."
+ IRQ_female_positions_desc: "Some workplaces and employers have installed new regulations that may make it difficult for women to land a job, and we must crack down on these discriminatory policies."
  IRQ_our_voice: "Our Voice"
  IRQ_our_voice_desc: "By establishing our own newspaper 'Al-Qaidah', we could get our message out to the people with greater ease."
  IRQ_democratic_youth_federation: "Democratic Youth Federation"
@@ -434,7 +434,7 @@
  IRQ_rally_support_for_al_ansar: "Rally Support For al-Ansar"
  IRQ_rally_support_for_al_ansar_desc: "The armed wing of our party al-Ansar has long been dissolved. However, we are able to rally popular support as a means to re-establish the wing."
  IRQ_address_army_corruption: "Address Army Corruption"
- IRQ_address_army_corruption_desc: "The army is incredibly corrupt, and this corruption has lead to the fruition of 'Ghost Soldiers'. We will clamp down on this corruption and restore order to the ranks."
+ IRQ_address_army_corruption_desc: "The army is incredibly corrupt, and this corruption has led to the fruition of 'Ghost Soldiers'. We will clamp down on this corruption and restore order to the ranks."
  IRQ_ideological_allies: "Ideological Allies"
  IRQ_ideological_allies_desc: "We've got many friends in the world, we just need to reach out to them. We will begin going on a diplomatic mission to these nations to establish proper economic ties."
  IRQ_rally_the_kurdish_parties: "A Friend of the Kurd's"
@@ -448,7 +448,7 @@
  IRQ_nationalization_of_the_economy: "Nationalization of the Economy"
  IRQ_nationalization_of_the_economy_desc: "Certain crucial economic sectors in Iraq are partially or are predominantly owned by private groups, people, or companies. We cannot have our resources in the hands of a small group of people, and it must be in the hands of Iraqi's."
  IRQ_expulsion_of_the_iranians: "Expulsion of the Iranians"
- IRQ_expulsion_of_the_iranians_desc: "The Iranian's have been trying for many years now to cement their control over Iraq, and this must have an end put to it."
+ IRQ_expulsion_of_the_iranians_desc: "The Iranians have been trying for many years now to cement their control over Iraq, and thus must have an end put to it."
  IRQ_restrictions_on_the_americans: "Restrictions On The Americans"
  IRQ_restrictions_on_the_americans_desc: "Even though the Americans are the primary reason that Saddam Hussein and his goons no longer rule Iraq, it does not mean that they get the freedom to do as they wish. We will monitor their activities within Iraq to ensure they don't do anything that would cause harm to our people."
  IRQ_the_call_to_freedom: "The Call to Freedom"
@@ -474,7 +474,7 @@
  IRQ_shockwaves_in_the_clergy: "Shockwaves in The Clergy"
  IRQ_shockwaves_in_the_clergy_desc: "By taking out a few of the clergy-men who decide they want to run their mouthes, we could easily send shockwaves through the clergy and silence any incoming dissent."
  IRQ_positions_for_supporters: "Positions For Supporters"
- IRQ_positions_for_supporters_desc: "We must reward those who have stuck with us till the end, and this can be done by giving them a higher likelyhood of landing any job that they so wish of."
+ IRQ_positions_for_supporters_desc: "We must reward those who have stuck with us till the end, and this can be done by giving them a higher likelihood of landing any job that they so wish of."
  IRQ_development_of_east_baghdad: "Development of East Baghdad"
  IRQ_development_of_east_baghdad_desc: "East Baghdad has been neglected for some time now, and developing it to make it be up to standard will be very beneficial."
  IRQ_al_hawsim: "Al Hawsim"
