Custom Modifier FInished

--- a/localisation/english/MD_focus_CMW_l_english.yml
+++ b/localisation/english/MD_focus_CMW_l_english.yml
@@ -15,16 +15,52 @@
  CMW_Fuel_Gain_Factor_TT: "£fuel_gain_oil_texticon  Fuel Gain per Fossil Fuels: [?CMW_Fuel_Gain_Factor_change|%+] \n"
  CMW_Trade_Opinion_Factor: "£trade_deal_opinion_texticon  Trade deal opinion factor"
  CMW_modify_trade_opinion_factor_TT: "£trade_deal_opinion_texticon  Trade deal opinion factor: [?CMW_trade_opinion_Factor_change|%+] \n"
-
-
-
-
-
-
-
-
-
-
+ CMW_Office_Park_Income_Tax_Modifier: "£corporate_tax_income_multiplier_modifier_texticon §Y$offices$§! Tax Revenue Multiplier"
+ CMW_modify_office_park_income_tax_modifier_TT: "£corporate_tax_income_multiplier_modifier_texticon §Y$offices$§! Tax Revenue Multiplier: [?CMW_office_park_income_tax_modifier_change|%+] \n "
+ CMW_Stability_Factor: "£stability_texticon  Stability"
+ CMW_modify_stability_factor_tt: "£stability_texticon  Gain Base Stability: [?CMW_stability_factor_change|%+] \n "
+ CMW_productivity_Growth: "Monthly Productivity Growth"
+ CMW_modify_productivity_growth_tt: "Monthly Productivity Growth: [?CMW_monthly_productivity_growth_change|%+] \n "
+ CMW_Tax_Gain_Multiplier_modifier: "£tax_gain_multiplier_modifier_texticon §YTax Revenue§! Multiplier"
+ CMW_modify_tax_gain_multiplier_modifier_tt: "£tax_gain_multiplier_modifier_texticon §YTax Revenue§! Multiplier: [?CMW_Tax_Gain_Multiplier_modifier_change|%+] \n "
+ CMW_Expected_Adm_Modifier: "§YExpected Administrative Spending§!"
+ CMW_modify_Expected_Adm_Modifier_tt: "§YExpected Administrative Spending§!: [?CMW_expected_adm_modifier_change|%+] \n "
+ CMW_Interest_rate_multiplier_modifier: "£interest_rate_multiplier_modifier_texticon §YInterest Rate§!"
+ CMW_Interest_rate_multiplier_modifier_TT: "£interest_rate_multiplier_modifier_texticon §YInterest Rate§!: [?CMW_Interest_rate_multiplier_modifier_change|%+] \n"
+ CMW_Energy_Use_Multiplier: "Power Use Multiplier"
+ CMW_Energy_Use_Multiplier_tt: "Power Use Multiplier: [?CMW_Energy_Use_Multiplier_change|%+] \n"
+ CMW_Battery_Park_Construction_Cost: "Battery Park Construction Cost"
+ CMW_Battery_Park_Construction_Cost_tt: "Battery Park Construction Cost: [?CMW_Battery_Park_Construction_Cost_change|%+] \n"
+ CMW_Global_Building_Slots_Modifier: "£civ_factory  Max Factories in a State"
+ CMW_Global_Building_Slots_Modifier_tt: "£civ_factory  Max Factories in a State: [?CMW_Global_Building_Slots_Modifier_change|%+] \n"
+ CMW_Health_Cost_Multiplier_Modifier: "£health_cost_multiplier_modifier_texticon §YHealth Cost§! Multiplier"
+ CMW_Health_Cost_Multiplier_Modifier_tt: "£health_cost_multiplier_modifier_texticon §YHealth Cost§! Multiplier: [?CMW_Health_Cost_Multiplier_Modifier_change|%+] \n"
+ CMW_Expected_Healthcare_Modifier: "§YExpected Healthcare Spending§!"
+ CMW_Expected_Healthcare_Modifier_tt: "§YExpected Healthcare Spending§!: [?CMW_Expected_Healthcare_Modifier_change|%+] \n"
+ CMW_offices_worker_requirement_modifier: "Offices Required Workforce"
+ CMW_offices_worker_requirement_modifier_tt: "§YOffices Required Workforce§!: [?CMW_offices_worker_requirement_modifier_change|%+] \n"
+ CMW_corruption_cost_factor: "£corruption_cost_factor_texticon Cost to change Corruption"
+ CMW_corruption_cost_factor_tt: "£corruption_cost_factor_texticon Cost to change Corruption: [?CMW_corruption_cost_factor_change|%+] \n"
+ CMW_experience_gain_army_factor: "£army_experience  Army Experience Gain"
+ CMW_experience_gain_army_factor_tt: "£army_experience  Army Experience Gain: [?CMW_experience_gain_army_factor_change|%+] \n"
+ CMW_experience_gain_air_factor: "£air_experience  Air Experience Gain"
+ CMW_experience_gain_air_factor_tt: "£air_experience  Air Experience Gain: [?CMW_experience_gain_air_factor_change|%+] \n"
+ CMW_experience_gain_navy_factor: "£navy_experience  Naval Experience Gain"
+ CMW_experience_gain_navy_factor_tt: "£navy_experience  Naval Experience Gain: [?CMW_experience_gain_air_factor_change|%+] \n"
+ CMW_police_cost_multiplier_modifier: "£police_cost_multiplier_modifier_texticon §YPolice Cost§! Multiplier"
+ CMW_police_cost_multiplier_modifier_tt: "£police_cost_multiplier_modifier_texticon §YPolice Cost§! Multiplier: [?CMW_police_cost_multiplier_modifier_change|%+] \n"
+ CMW_resistance_growth: "£political_violence_gain_texticon  Resistance Growth Speed"
+ CMW_resistance_growth_tt: "£political_violence_gain_texticon  Resistance Growth Speed: [?CMW_resistance_growth_change|%+] \n"
+ CMW_army_speed_factor: "£attacker_speed_texticon  Divisions speed"
+ CMW_army_speed_factor_tt: "£attacker_speed_texticon  Divisions speed: [?CMW_army_speed_factor_change|%+] \n"
+ CMW_terrain_trait_xp_gain_factor: "£experience_neutral_texticon  Terrain traits XP Gain"
+ CMW_terrain_trait_xp_gain_factor_tt: "£experience_neutral_texticon  Terrain traits XP Gain: [?CMW_terrain_trait_xp_gain_factor_change|%+] \n"
+ CMW_experience_gain_factor: "£leader_experience_gain_texticon  Leader Experience Gain"
+ CMW_experience_gain_factor_tt: "£leader_experience_gain_texticon  Leader Experience Gain: [?CMW_experience_gain_factor_change|%+] \n"
+ CMW_personnel_cost_multiplier_modifier: "£personnel_cost_multiplier_modifier_texticon §YMilitary Cost§! Multiplier"
+ CMW_personnel_cost_multiplier_modifier_tt: "£personnel_cost_multiplier_modifier_texticon §YMilitary Cost§! Multiplier: [?CMW_personnel_cost_multiplier_modifier_change|%+] \n"
+ CMW_Investment_Cost_Modifier: "£investment_cost_modifier_texticon §YForeign Investment§! Cost Modifier"
+ CMW_Investment_Cost_Modifier_tt: "£investment_cost_modifier_texticon §YForeign Investment§! Cost Modifier: [?CMW_Investment_Cost_Modifier_change|%+] \n"
 
  ##### Focus Tree #####
  CMW_of_Learning: "Commonwealth of Learning"
